fix: contentGalerie text align

--- a/style.css
+++ b/style.css
@@ -311,6 +311,7 @@ body {
 
 .contentGalerie p{
     font-size: 24px;
+    text-align: center;
 }
 
 .contentGalerie:hover {
